# employee_disciplinary_app

./: MANIFEST.in  README.md  hooks.py  package.json  pyproject.toml
employee_disciplinary_app/: INSTALLATION_GUIDE.md  hooks.py  pyproject.toml  setup.py
employee_disciplinary_app/employee_disciplinary_app/doctype/: __init__.py
employee_disciplinary_app/employee_disciplinary_app/report/employee_disciplinary_history/: employee_disciplinary_history.js
employee_disciplinary_app/public/: build.json
employee_disciplinary_app/public/css/: employee_disciplinary_app.css
employee_disciplinary_app/public/js/: employee_disciplinary_app.bundle.js
employee_disciplinary_app/report/employee_disciplinary_history/: employee_disciplinary_history.json  employee_disciplinary_history.py
public/: build.json
