[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee_disciplinary_app"
version = "0.0.1"
description = "Employee Disciplinary Action Report for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["employee_disciplinary_app*"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0.dev0,<17.0.0"
erpnext = ">=16.0.0.dev0,<17.0.0"
hrms = ">=16.0.0.dev0,<17.0.0"

