[project]
name = "employee_disciplinary_app"
authors = [
  { name = "Ahmed Abbas", email = "your.email@example.com" }
]
description = "Employee disciplinary history and reporting for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  # frappe/erpnext/hrms are installed and managed by bench (Frappe Cloud)
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
