[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "employee_disciplinary_app"
version = "0.0.1"
description = "Employee disciplinary history and reporting for ERPNext"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["employee_disciplinary_app*"]

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0-dev"
erpnext = ">=16.0.0-dev,<17.0.0-dev"
hrms = ">=16.0.0-dev,<17.0.0-dev"
